[FIX] title text alignment

--- a/src/components/tutor/components/contest/contest.module.css
+++ b/src/components/tutor/components/contest/contest.module.css
@@ -24,6 +24,8 @@
 
     font-weight: 700;
 
+    text-align: center;
+
     &::before {
       content: "مسابقه‌ی ";
     }
